[package]
name = "woody"
version = "0.1.0"
edition = "2021"

[dependencies]
libc = "0.2"
nix = "0.23"         # For Linux syscalls (unshare, pivot_root, mount, execve)
tokio = { version = "1", features = ["full"] } # Async runtime
reqwest = { version = "0.11", features = ["json"] } # HTTP client
serde = { version = "1.0", features = ["derive"] } # For deserializing JSON
serde_json = "1.0"      # JSON support for serde
tar = "0.4"             # For unpacking .tar files
flate2 = "1.0"          # For decompressing .gz files (gzipped tarballs)
anyhow = "1.0"          # For simpler error handling

[features]
debug-reqs = []

